Alteração feita nos menu lateral

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -220,24 +220,42 @@
                             <li class="active first"> <!--always define class .first for first-child of li element sidebar left-->
                                 <a href="index-2.html" title="dashboard">
                                     <div class="helper-font-24">
-                                        <i class="icofont-dashboard"></i>
+                                        
                                     </div>
-                                    <span class="sidebar-text">Administrador</span>
+                                    <span class="sidebar-text">Principal</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="interface.html" title="interface">
                                     <div class="helper-font-24">
-                                        <i class="icofont-magnet"></i>
+                                        
                                     </div>
                                     <span class="sidebar-text">Funcionario</span>
                                 </a>
+                                <ul class="sub-sidebar-form corner-top shadow-white">
+                                    <li class="title muted">Opções</li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="form.html" title="form element" class="corner-all">
+                                            <i class="icofont-file"></i>
+                                            <span class="sidebar-text">Consultar</span>
+                                        </a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                            <i class="icofont-book"></i>
+                                            <span class="sidebar-text">Cadastrar</span>
+                                        </a>
+                                    </li>
+                                    
+                                </ul>
                             </li>
                             <li>
                                 <a title="form">
                                     <!--<div class="badge badge-important">3</div>-->
                                     <div class="helper-font-24">
-                                        <i class="icofont-edit"></i>
+                                       
                                     </div>
                                     <span class="sidebar-text">Paciente</span>
                                 </a>
@@ -247,54 +265,85 @@
                                     <li>
                                         <a href="form.html" title="form element" class="corner-all">
                                             <i class="icofont-file"></i>
-                                            <span class="sidebar-text">Cadastrar</span>
+                                            <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="code_editor.html" title="code editor" class="corner-all">
                                             <i class="icofont-book"></i>
-                                            <span class="sidebar-text">Code Editor</span>
+                                            <span class="sidebar-text">Cadastrar</span>
                                         </a>
                                     </li>
-                                    <li>
-                                        <a href="gallery.html" title="gallery" class="corner-all">
-                                            <i class="icofont-picture"></i>
-                                            <span class="sidebar-text">Gallery</span>
-                                        </a>
-                                    </li>
+                                    
                                 </ul>
                             </li>
                             <li>
                                 <a href="charts.html" title="charts">
                                     <div class="helper-font-24">
-                                        <i class="icofont-bar-chart"></i>
+                                        
                                     </div>
-                                    <span class="sidebar-text">charts</span>
+                                    <span class="sidebar-text">Vacina</span>
                                 </a>
+                                <ul class="sub-sidebar-form corner-top shadow-white">
+                                    <li class="title muted">Opções</li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="form.html" title="form element" class="corner-all">
+                                            <i class="icofont-file"></i>
+                                            <span class="sidebar-text">Consultar</span>
+                                        </a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                            <i class="icofont-book"></i>
+                                            <span class="sidebar-text">Cadastrar</span>
+                                        </a>
+                                    </li>
+                                    
+                                </ul>
                             </li>
                             <li>
                                 <a href="tables.html" title="table">
                                     <div class="helper-font-24">
-                                        <i class="icofont-table"></i>
+                                       
                                     </div>
-                                    <span class="sidebar-text">Tables</span>
+                                    <span class="sidebar-text">Cartão de Vacinas</span>
                                 </a>
+                                <ul class="sub-sidebar-form corner-top shadow-white">
+                                    <li class="title muted">Opções</li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="form.html" title="form element" class="corner-all">
+                                            <i class="icofont-file"></i>
+                                            <span class="sidebar-text">Consultar</span>
+                                        </a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                            <i class="icofont-book"></i>
+                                            <span class="sidebar-text">Cadastrar</span>
+                                        </a>
+                                    </li>
+                                    
+                                </ul>
                             </li>
                             <li>
                                 <a href="grids.html" title="grids">
                                     <div class="helper-font-24">
-                                        <i class="icofont-columns"></i>
+                                      
                                     </div>
-                                    <span class="sidebar-text">Grids</span>
+                                    <span class="sidebar-text">Mensagens</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="icons.html" title="icons">
                                     <div class="helper-font-24">
-                                        <i class="icofont-star"></i>
+                                        
                                     </div>
-                                    <span class="sidebar-text">Icons</span>
+                                    <span class="sidebar-text">Emitir Relatório</span>
                                 </a>
                             </li>
                             <li>
