Alteração feita nos menu lateral

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -230,7 +230,7 @@
                                     <div class="helper-font-24">
                                         
                                     </div>
-                                    <span class="sidebar-text">Funcionario</span>
+                                    <span class="sidebar-text">Funcionário</span>
                                 </a>
                                 <ul class="sub-sidebar-form corner-top shadow-white">
                                     <li class="title muted">Opções</li>
@@ -337,6 +337,24 @@
                                     </div>
                                     <span class="sidebar-text">Mensagens</span>
                                 </a>
+                                <ul class="sub-sidebar-form corner-top shadow-white">
+                                    <li class="title muted">Opções</li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="form.html" title="form element" class="corner-all">
+                                            <i class="icofont-file"></i>
+                                            <span class="sidebar-text">Enviar</span>
+                                        </a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                            <i class="icofont-book"></i>
+                                            <span class="sidebar-text">Histórico de mensagens</span>
+                                        </a>
+                                    </li>
+                                    
+                                </ul>
                             </li>
                             <li>
                                 <a href="icons.html" title="icons">
