--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -361,15 +361,33 @@
                                     <div class="helper-font-24">
                                         
                                     </div>
-                                    <span class="sidebar-text">Emitir Relatório</span>
+                                    <span class="sidebar-text">Campanhas</span>
                                 </a>
+                                <ul class="sub-sidebar-form corner-top shadow-white">
+                                    <li class="title muted">Opções</li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="form.html" title="form element" class="corner-all">
+                                            <i class="icofont-file"></i>
+                                            <span class="sidebar-text">Consultar</span>
+                                        </a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                            <i class="icofont-book"></i>
+                                            <span class="sidebar-text">Cadastrar</span>
+                                        </a>
+                                    </li>
+                                    
+                                </ul>
                             </li>
                             <li>
                                 <a href="widgets.html" title="widgets">
                                     <div class="helper-font-24">
-                                        <i class="icofont-reorder"></i>
+                                        
                                     </div>
-                                    <span class="sidebar-text">Widgets</span>
+                                    <span class="sidebar-text">Emitir Relatórios</span>
                                 </a>
                             </li>
                             <li>
