Alteração feita nos menu lateral

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -278,12 +278,13 @@
                                     
                                 </ul>
                             </li>
+                            
                             <li>
                                 <a href="charts.html" title="charts">
                                     <div class="helper-font-24">
                                         
                                     </div>
-                                    <span class="sidebar-text">Vacina</span>
+                                    <span class="sidebar-text">Unidades de Saúde</span>
                                 </a>
                                 <ul class="sub-sidebar-form corner-top shadow-white">
                                     <li class="title muted">Opções</li>
@@ -309,7 +310,7 @@
                                     <div class="helper-font-24">
                                        
                                     </div>
-                                    <span class="sidebar-text">Cartão de Vacinas</span>
+                                    <span class="sidebar-text">Vacinas</span>
                                 </a>
                                 <ul class="sub-sidebar-form corner-top shadow-white">
                                     <li class="title muted">Opções</li>
@@ -335,7 +336,7 @@
                                     <div class="helper-font-24">
                                       
                                     </div>
-                                    <span class="sidebar-text">Mensagens</span>
+                                    <span class="sidebar-text">Cartão de Vacinas</span>
                                 </a>
                                 <ul class="sub-sidebar-form corner-top shadow-white">
                                     <li class="title muted">Opções</li>
@@ -343,14 +344,14 @@
                                     <li>
                                         <a href="form.html" title="form element" class="corner-all">
                                             <i class="icofont-file"></i>
-                                            <span class="sidebar-text">Enviar</span>
+                                            <span class="sidebar-text">Consultar</span>
                                         </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a href="code_editor.html" title="code editor" class="corner-all">
                                             <i class="icofont-book"></i>
-                                            <span class="sidebar-text">Histórico de mensagens</span>
+                                            <span class="sidebar-text">Cadastrar</span>
                                         </a>
                                     </li>
                                     
@@ -383,6 +384,32 @@
                                 </ul>
                             </li>
                             <li>
+                                <a href="icons.html" title="icons">
+                                    <div class="helper-font-24">
+                                        
+                                    </div>
+                                    <span class="sidebar-text">Mensagens</span>
+                                </a>
+                                <ul class="sub-sidebar-form corner-top shadow-white">
+                                    <li class="title muted">Opções</li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="form.html" title="form element" class="corner-all">
+                                            <i class="icofont-file"></i>
+                                            <span class="sidebar-text">Enviar</span>
+                                        </a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="code_editor.html" title="code editor" class="corner-all">
+                                            <i class="icofont-book"></i>
+                                            <span class="sidebar-text">Histórico de Mensagens</span>
+                                        </a>
+                                    </li>
+                                    
+                                </ul>
+                            </li>
+                            <li>
                                 <a href="widgets.html" title="widgets">
                                     <div class="helper-font-24">
                                         
@@ -390,58 +417,7 @@
                                     <span class="sidebar-text">Emitir Relatórios</span>
                                 </a>
                             </li>
-                            <li>
-                                <a href="#" title="more">
-                                    <div class="badge badge-important">5</div>
-                                    <div class="helper-font-24">
-                                        <i class="icofont-th-large"></i>
-                                    </div>
-                                    <span class="sidebar-text">More</span>
-                                </a>
-                                <ul class="sub-sidebar corner-top shadow-silver-dark">
-                                    <li>
-                                        <a href="404.html" title="not found">
-                                            <div class="helper-font-24">
-                                                <i class="icofont-warning-sign"></i>
-                                            </div>
-                                            <span class="sidebar-text">404</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="login.html" title="login">
-                                            <div class="helper-font-24">
-                                                <i class="icofont-lock"></i>
-                                            </div>
-                                            <span class="sidebar-text">Login</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="invoice.html" title="invoice">
-                                            <div class="helper-font-24">
-                                                <i class="icofont-barcode"></i>
-                                            </div>
-                                            <span class="sidebar-text">Invoice</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="pricing.html" title="pricing table">
-                                            <div class="helper-font-24">
-                                                <i class="icofont-briefcase"></i>
-                                            </div>
-                                            <span class="sidebar-text">Pricing</span>
-                                        </a>
-                                    </li>
-                                    <li class="divider"></li>
-                                    <li>
-                                        <a href="bonus-page/resume/index.html" title="resume">
-                                            <div class="helper-font-24">
-                                                <i class="icofont-user"></i>
-                                            </div>
-                                            <span class="sidebar-text">Resume</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
+                            
                         </ul>
                     </aside><!--/side bar -->
                 </div><!-- span side-left -->
