Atualização de pacote

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -15,6 +15,7 @@
         <!-- styles -->
         <link href="/administrator/css/bootstrap.css" rel="stylesheet">
         <link href="/administrator/css/bootstrap-responsive.css" rel="stylesheet">
+        
         <link href="/administrator/css/stilearn.css" rel="stylesheet">
         <link href="/administrator/css/stilearn-responsive.css" rel="stylesheet">
         <link href="/administrator/css/stilearn-helper.css" rel="stylesheet">
@@ -23,6 +24,13 @@
         <link href="/administrator/css/animate.css" rel="stylesheet">
         <link href="/administrator/css/uniform.default.css" rel="stylesheet">
 
+        <link href="/administrator/css/DT_bootstrap.css" rel="stylesheet">
+        <link href="/administrator/css/colorpicker.css" rel="stylesheet">
+        <link href="/administrator/css/datepicker.css" rel="stylesheet">
+        <link href="/administrator/css/elusive-webfont.css" rel="stylesheet">
+        <link href="/administrator/css/picons-oxygen.css" rel="stylesheet">
+        <link href="/administrator/css/prettyPhoto.css" rel="stylesheet">
+        
         <link href="/administrator/css/select2.css" rel="stylesheet">
         <link href="/administrator/css/fullcalendar.css" rel="stylesheet">
         <link href="/administrator/css/bootstrap-wysihtml5.css" rel="stylesheet">
@@ -70,7 +78,7 @@
                                         <a href="#">
                                             <div class="notification">John Doe commented on a post</div>
                                             <div class="media">
-                                                <img class="media-object pull-left" data-src="js/holder.js/64x64" />
+                                                <img class="media-object pull-left" data-src="js/holder.js/64x64"/>
                                                 <div class="media-body">
                                                     <h4 class="media-heading">Lorem ipsum <small class="helper-font-small"> john doe</small></h4>
                                                     <p>Raw denim you probably haven't heard of them jean shorts Austin.</p>
