Alteração feita nos menu lateral

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -218,7 +218,7 @@
                     <aside class="side-left">
                         <ul class="sidebar">
                             <li class="active first"> <!--always define class .first for first-child of li element sidebar left-->
-                                <a href="index-2.html" title="dashboard">
+                                <a href="/admin" title="dashboard">
                                     <div class="helper-font-24">
                                         
                                     </div>
@@ -236,7 +236,7 @@
                                     <li class="title muted">Opções</li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="form.html" title="form element" class="corner-all">
+                                        <a href="/admin/pessoa/consulta-funcionario" title="form element" class="corner-all">
                                             <i class="icofont-file"></i>
                                             <span class="sidebar-text">Consultar</span>
                                         </a>
@@ -450,7 +450,7 @@
                                     </a>
                                 </li>
                             </ul>
-                            <h2><i class="icofont-home"></i> Dashboard <small>welcome to stilearn</small></h2>
+                            <h2><i class="icofont-home"></i>Painel Administrativo</h2>
                         </div><!-- /content-header -->
                         
                         <!-- content-breadcrumb -->
