Atualização de pacote

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -22,6 +22,13 @@
         <link href="/administrator/css/font-awesome.css" rel="stylesheet">
         <link href="/administrator/css/animate.css" rel="stylesheet">
         <link href="/administrator/css/uniform.default.css" rel="stylesheet">
+        
+        <link href="/administrator/css/DT_bootstrap.css" rel="stylesheet">
+        <link href="/administrator/css/colorpicker.css" rel="stylesheet">
+        <link href="/administrator/css/datepicker.css" rel="stylesheet">
+        <link href="/administrator/css/elusive-webfont.css" rel="stylesheet">
+        <link href="/administrator/css/picons-oxygen.css" rel="stylesheet">
+        <link href="/administrator/css/prettyPhoto.css" rel="stylesheet">
 
         <link href="/administrator/css/select2.css" rel="stylesheet">
         <link href="/administrator/css/fullcalendar.css" rel="stylesheet">
@@ -178,14 +185,14 @@
                             </div>
                             <div class="btn-group user-group">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                    <img class="corner-all" align="middle" src="img/user-thumb.jpg" title="John Doe" alt="john doe" /> <!--this for display on PC device-->
+                                    <img class="corner-all" align="middle" src="/administrator/img/user-thumb.jpg" title="John Doe" alt="john doe" /> <!--this for display on PC device-->
                                     <button class="btn btn-small btn-inverse">John Doe</button> <!--this for display on tablet and phone device-->
                                 </a>
                                 <ul class="dropdown-menu dropdown-user" role="menu" aria-labelledby="dLabel">
                                     <li>
                                         <div class="media">
                                             <a class="pull-left" href="#">
-                                                <img class="img-circle" src="img/user.jpg" title="profile" alt="profile" />
+                                                <img class="img-circle" src="/administrator/img/user.jpg" title="profile" alt="profile" />
                                             </a>
                                             <div class="media-body description">
                                                 <p><strong>John Doe</strong></p>
