Atualização de pacote

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -174,31 +174,31 @@
                                 </ul>
                             </div>
                             <div class="btn-group">
-                                <a class="btn btn-inverse btn-small" href="#">Other Action</a>
+                                <a class="btn btn-inverse btn-small" href="#">Outras Ações</a>
                             </div>
                             <div class="btn-group user-group">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                    <img class="corner-all" align="middle" src="img/user-thumb.jpg" title="John Doe" alt="john doe" /> <!--this for display on PC device-->
+                                    <img class="corner-all" align="middle" src="/administrator/img/user-thumb.jpg" title="John Doe" alt="john doe" /> <!--this for display on PC device-->
                                     <button class="btn btn-small btn-inverse">John Doe</button> <!--this for display on tablet and phone device-->
                                 </a>
                                 <ul class="dropdown-menu dropdown-user" role="menu" aria-labelledby="dLabel">
                                     <li>
                                         <div class="media">
                                             <a class="pull-left" href="#">
-                                                <img class="img-circle" src="img/user.jpg" title="profile" alt="profile" />
+                                                <img class="img-circle" src="/administrator/img/user.jpg" title="profile" alt="profile" />
                                             </a>
                                             <div class="media-body description">
                                                 <p><strong>John Doe</strong></p>
                                                 <p class="muted">johndoe@mail.com</p>
-                                                <p class="action"><a class="link" href="#">Activity</a> - <a class="link" href="#">Setting</a></p>
-                                                <a href="bonus-page/resume/index.html" class="btn btn-primary btn-small btn-block">View Profile</a>
+                                                <p class="action">Status - Ativo</p>
+                                                <a href="/admin/perfil" class="btn btn-primary btn-small btn-block">Ver Perfil</a>
                                             </div>
                                         </div>
                                     </li>
                                     <li class="dropdown-footer">
                                         <div>
-                                            <a class="btn btn-small pull-right" href="login.html">Logout</a>
-                                            <a class="btn btn-small" href="#">Add Account</a>
+                                            <a class="btn btn-small pull-right" href="/admin/auth/logout">Sair</a>
+                                            <a class="btn btn-small" href="/admin/perfil/editar">Alterar conta</a>
                                         </div>
                                     </li>
                                 </ul>
@@ -828,19 +828,19 @@
                             <!--sidebar-right-header-->
                             <div class="sidebar-right-header">
                                 <div class="sr-header-right">
-                                    <h2><span class="label label-info">$26,875</span></h2>
+                                    <h2><span class="label label-info"></span></h2>
                                 </div>
                                 <div class="sr-header-left">
-                                    <p class="bold">Balance</p>
-                                    <small class="muted">Dec 30 2012</small>
+                                    <p class="bold">Informações Extras</p>
+                                    
                                 </div>
                             </div><!--/sidebar-right-header-->
                             <!--sidebar-right-control-->
                             <div class="sidebar-right-control">
                                 <ul class="sr-control-item">
-                                    <li class="active"><a href="#contact" data-toggle="tab" title="contacts"><i class="icofont-group"></i></a></li>
-                                    <li><a href="#alt1" data-toggle="tab" title="alternative 1"><i class="icofont-flag"></i></a></li>
-                                    <li rel="tooltip-bottom" title="view site"><a href="index-2.html" target="_BLANK"><i class="icofont-external-link"></i></a></li>
+                                    <li class="active"><a href="#contact" data-toggle="tab" title="Fale Conosco"><i class="icofont-group"></i></a></li>
+                                    <li><a href="#alt1" data-toggle="tab" title="Estoque de vacinas"><i class="icofont-flag"></i></a></li>
+                                    <li rel="tooltip-bottom" title="ver site"><a href="index-2.html" target="_BLANK"><i class="icofont-external-link"></i></a></li>
                                 </ul>
                             </div><!-- /sidebar-right-control-->
                             <!-- sidebar-right-content -->
@@ -933,7 +933,7 @@
                                                         <!--we use contact-item structure like the component media in bootstrap-->
                                                         <div class="contact-item">
                                                             <div class="pull-left">
-                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="img/user-thumb-mini.jpg">
+                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="/administrator/img/user-thumb-mini.jpg">
                                                             </div>
                                                             <div class="contact-item-body">
                                                                 <div class="status" title="busy"><i class="icofont-certificate color-red"></i></div>
@@ -948,7 +948,7 @@
                                                     <a href="#chat" data-toggle="tab" data-id="sungep@mail.com">
                                                         <div class="contact-item">
                                                             <div class="pull-left">
-                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="img/user-thumb-mini.jpg">
+                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="/administrator/img/user-thumb-mini.jpg">
                                                             </div>
                                                             <div class="contact-item-body">
                                                                 <div class="status" title="idle"><i class="icofont-certificate color-orange"></i></div>
@@ -963,7 +963,7 @@
                                                     <a href="#chat" data-toggle="tab" data-id="harab@mail.com">
                                                         <div class="contact-item">
                                                             <div class="pull-left">
-                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="img/user-thumb-mini.jpg">
+                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="/administrator/img/user-thumb-mini.jpg">
                                                             </div>
                                                             <div class="contact-item-body">
                                                                 <div class="status" title="ofline"><i class="icofont-certificate color-silver-dark"></i></div>
@@ -978,7 +978,7 @@
                                                     <a href="#chat" data-toggle="tab" data-id="janesmith@mail.com">
                                                         <div class="contact-item">
                                                             <div class="pull-left">
-                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="img/user-thumb-mini.jpg">
+                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="/administrator/img/user-thumb-mini.jpg">
                                                             </div>
                                                             <div class="contact-item-body">
                                                                 <div class="status" title="online"><i class="icofont-certificate color-green"></i></div>
@@ -993,7 +993,7 @@
                                                     <a href="#chat" data-toggle="tab" data-id="mahardika@mail.com">
                                                         <div class="contact-item">
                                                             <div class="pull-left">
-                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="img/user-thumb-mini.jpg">
+                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="/administrator/img/user-thumb-mini.jpg">
                                                             </div>
                                                             <div class="contact-item-body">
                                                                 <div class="status" title="online"><i class="icofont-certificate color-green"></i></div>
@@ -1008,7 +1008,7 @@
                                                     <a href="#chat" data-toggle="tab" data-id="patul@mail.com">
                                                         <div class="contact-item">
                                                             <div class="pull-left">
-                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="img/user-thumb-mini.jpg">
+                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="/administrator/img/user-thumb-mini.jpg">
                                                             </div>
                                                             <div class="contact-item-body">
                                                                 <div class="status" title="ofline"><i class="icofont-certificate color-silver-dark"></i></div>
@@ -1023,7 +1023,7 @@
                                                     <a href="#chat" data-toggle="tab" data-id="opytama@mail.com">
                                                         <div class="contact-item">
                                                             <div class="pull-left">
-                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="img/user-thumb-mini.jpg">
+                                                                <img class="contact-item-object" style="width: 32px;height: 32px;" src="/administrator/img/user-thumb-mini.jpg">
                                                             </div>
                                                             <div class="contact-item-body">
                                                                 <div class="status" title="ofline"><i class="icofont-certificate color-silver-dark"></i></div>
@@ -1050,7 +1050,7 @@
                                         <div class="side-task">
                                             <div class="task active">
                                                 <span class="task-header">
-                                                    <img src="img/loader_16.gif" /> 
+                                                    <img src="/administrator/img/loader_16.gif" /> 
                                                     <strong>Portofolio_W34GF.zip</strong>
                                                 </span>
                                                 <span class="task-desc">9.1 of 17MB - 243KB/sec - 1 min</span>
